assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,400;1,100;1,400&family=Roboto:wght@500;700;900&display=swap');

*{
    border: none;
    box-sizing: border-box;
    margin: 0;
    padding: 0; 
}

body{
    background-color: white;
}

/*..... Header .....*/

header{
    align-items: center;
    background-color: white;
    display: flex;
    font-family: Roboto, sans-serif;
    height: 7em;
    overflow: hidden;
}

#logocontainer{
    width: 50%;
}

#menu{
    padding-left: 50px;
}

#menu li{
    display: inline;
    margin-left: 70px;
}

#logo{
    float: left;
    height: 250px;
    margin-left: 30px;
    width: 40%;
}

#menu a{
    border: 1px solid rgb(230, 32, 65);
    color: #184E20;
    cursor: pointer;
    font-size: 140%;
    font-family: Roboto, sans-serif;
    padding: 5px;
    text-decoration: none;
}

 #menu a.active{
    border-bottom: 1px solid #184E20;
    background-color: rgb(230, 32, 65);
    color: white;
    font-weight: 900;
 }


 /*..... Brand Caption and Hero Slides Images .....*/
 
 /*. Hero Slides .*/
 #image-cont{
    height: 350px;
    overflow: hidden;
    position: relative;
    width: 100%;
}

#image-cont #slides > div {
    animation: animate 20s infinite;
    background-position: center center;
    background-size: cover;
    height: 100%;
    opacity: 0;
    position: absolute;
    -webkit-background-size: cover;
    width: 100%;
}
/** Animation from https://youtu.be/FrQR7igd9bs with my modification **/

#image-cont #slides > div:nth-child(2){
    animation-delay: 5s;
}
#image-cont #slides > div:nth-child(3){
    animation-delay: 10s;
}
#image-cont #slides > div:nth-child(4){
    animation-delay: 15s;
}

@keyframes animate {
    10%{
        opacity: 0.7;
    }
    20%{
        opacity: 0.7;
    }
    30%{
        opacity: 0;
    }
    40%{
        transform: scale(1.2);
    }
    
}

/*. Cover text .*/

#brandCall{
    background-color: #184E20;
    border-radius: 40%;
    bottom: 30px;
    color: white;
    font-size: 160%;
    font-family: Roboto, sans-serif;
    height: 260px;
    

    letter-spacing: 4px;
    opacity: 0.9;
    padding: 40px 5px 0 5px;
    position: absolute;
    right: 80px;
    text-align: center;
    text-transform: uppercase;
    width: 400px;   
}


#brandCall #quote{
    background-color: rgb(230, 32, 65);
    color: white;
    font-weight: 900;
    font-size: 50%;
    height: 50px;
    letter-spacing: 1px;
    padding: 5px;
    text-decoration: none;
    width: 20%;
}

#brandCall #quote:hover{
    background-color: white;
    color: rgb(230, 32, 65);
}

/*............. Service Section ............*/

#contentbox{
    font-size: 120%;
    height: 500px;
    margin: 0 auto;
    text-align: center;
    width: 100%; 
}

#subheader{
    color: #184E20;
    margin: 25px;
}

#contentbox #statedlist .content1 .image{
    height: 180px;
    width: 100%;
}

#statedlist{
    display: flex;
    margin: 0 auto;
    width: 90%;
}

.content1{
    font-family: Archivo,sans-serif;
    border: 2px solid #184E20;
    color: #184E20;
    height: 380px;
    margin: 10px;
    text-align: center; 
    width: 100%;
}

.content1 > p{
    margin-bottom: 10px;
    text-align: center;
    width: 100%;
}

.content1 a,
#moreservice a,
#salecontact,
#getservice{
    border-radius: 10px;
    color: rgb(230, 32, 65);
    font-family: Roboto,sans-serif;
    font-weight: 900;
    margin-top: 5px;
    text-decoration: none;
}

.content1 a:hover{
    background-color: rgb(230, 32, 65);
    color: white;
}

#moreservice{
    padding: 20px;
    height: 50px;
    width: 100%;
    text-align: center;
}

.subject{
    margin: 20px;
    font-weight: 900;
}

/*............. Blog section .............. */

#blog{
    background-color: #184E20;
    font-size: 130%;
    height: 500px;
    margin: 0 auto;
    text-align: center;
    width: 100%;
}

#blogheader{
    color: white;
    margin: 25px;
    padding-top: 5px;
}

#blogcontent{
    display: flex;
    height: 380px;
    margin: 0 auto;
    width: 90%;
}

.bloghighlight{
    background-color: white;
    color: #184E20;
    height: 380px;
    margin: 10px;
    overflow: hidden;
    text-align: center;
    width: 100%;
}

.blogimage{
    height: 250px;
    margin-bottom: 10px;
    width: 100%;
}

.bloghighlight h4{
    margin: 4px;
}

.readmore{
    background-color: rgb(230, 32, 65);
    border-radius: 10px;
    color: white;
    display: block;
    font-weight: bold;
    height: 30px;
    margin: 0 auto;
    margin-top: 10px;
    text-align: center;
    width: 20%;
}

.readmore:hover{
    background-color: white;
    border: 1px solid  rgb(230, 32, 65);
    color: rgb(230, 32, 65); 
}

/*.............. Contact .................*/

#contact{
    background-color: white;
    color: #184E20;
    height: 180px;
    margin-top: 30px;
    padding: 20px;
    width: 100%;
}

#subsubject{
    color: #184E20;
    font-size: 40px;
    margin-bottom: 5px;
}


#subject{
    font-size: 110%;
    width: 40%;
    padding: 20px;
    margin-left: 20px;
}

aside{
    background-color:white ;
    border: 3px solid #184E20;
    color: #184E20;
    height: 150px;
    line-height: 30px;
    margin-bottom: 5px;
    text-align: center;
    width: 350px;
}
aside > h4{
    font-size: 130%;
    font-weight: 900;
}

.fa-phone, .fa-message{
    color: rgb(230, 32, 65);
    font-size: xx-large;
    margin: 20px 0 5px 0;
}

#contact1{
    float: left;
    margin-left: 270px;
}

#contact2{
    float: right;
    margin-right: 270px;
}


/*.................  Map Section ...............*/
#mapspace{
    width: 100%;
}
#map{
    width: 100%;
    height: 250px;
}


/*............ Footer ...........*/

footer{ 
    background-color: white;
    color: #184E20;
    height: 50px;
    padding: 15px 0 15px 0;
    text-align: center;
    width: 100%;  
}

footer label{
    font-family: Archivo, sans-serif;
    font-size: larger;
    font-weight: 600;
}
/* ... */

